Remove some html for now

--- a/blog/index.mdx
+++ b/blog/index.mdx
@@ -6,9 +6,4 @@ title: "Blog"
 
 ## Posts
 
-<div id="posts-list">
-  <div className="card">
-    <h3>No posts yet</h3>
-    <p>I'll start writing soon.</p>
-  </div>
-</div>
+Nothing to see here yet!
