--- a/index.mdx
+++ b/index.mdx
@@ -6,19 +6,19 @@ description: "Sudhir Balaji"
 <div className="hero">
   <h1>Sudhir Balaji</h1>
   <div style={{display: 'flex', gap: '1rem', justifyContent: 'center', flexWrap: 'wrap'}}>
-    <a href="/about/" className="btn">About</a>
-    <a href="/blog/" className="btn btn-outline">Blog</a>
+    <a href="/about/">About</a>
+    <a href="/blog/">Blog</a>
   </div>
 </div>
 
 <div className="grid">
   <div className="card">
     <h3>Blog</h3>
-    <a href="/blog/" className="btn" style={{display: 'inline-block', marginTop: '1rem'}}>Read</a>
+    <a href="/blog/">Read</a>
   </div>
 
   <div className="card">
     <h3>TIL</h3>
-    <a href="/til/" className="btn" style={{display: 'inline-block', marginTop: '1rem'}}>Browse</a>
+    <a href="/til/">Browse</a>
   </div>
 </div>
