--- a/about/index.mdx
+++ b/about/index.mdx
@@ -12,24 +12,10 @@ Coming soon...
 
 ## Contact
 
-<div className="grid" style={{marginTop: '2rem'}}>
-  <div className="card">
-    <h4>Twitter</h4>
-    <a href="https://x.com/sudbalaji" className="btn btn-outline">@sudbalaji</a>
-  </div>
+[Twitter](https://x.com/sudbalaji)
 
-  <div className="card">
-    <h4>LinkedIn</h4>
-    <a href="https://www.linkedin.com/in/sudhirbalaji/" className="btn btn-outline">Profile</a>
-  </div>
+[LinkedIn](https://www.linkedin.com/in/sudhirbalaji/)
 
-  <div className="card">
-    <h4>GitHub</h4>
-    <a href="https://github.com/sudhir-b" className="btn btn-outline">Profile</a>
-  </div>
+[GitHub](https://github.com/sudhir-b)
 
-  <div className="card">
-    <h4>Email</h4>
-    <a href="mailto:me@sudhirb.com" className="btn btn-outline">Contact</a>
-  </div>
-</div>
+[Email](mailto:me@sudhirb.com)
