Stub out first blog post

--- a/blog/index.mdx
+++ b/blog/index.mdx
@@ -6,4 +6,4 @@ title: "Blog"
 
 ## Posts
 
-Nothing to see here yet!
+- [Bash Tools for Coding Agents](/blog/bash-tools-for-coding-agents/) - It's harder than it looks!
